# kwin-plugins

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
config/: kwinrc  kwinrulesrc
debian/: changelog  control  copyright
plugins/: CMakeLists.txt
plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h  yoyoos.json
plugins/roundedwindow/: CMakeLists.txt  dbus.h  resources.qrc  roundedwindow.cpp  roundedwindow.h  roundedwindow.json  roundedwindow_config.cpp  roundedwindow_config.desktop  roundedwindow_config.h
scripts/yoyo_popups/: metadata.desktop  metadata.json
scripts/yoyo_popups/contents/code/: main.js
scripts/yoyo_scale/: metadata.desktop  metadata.json
scripts/yoyo_scale/contents/code/: main.js
scripts/yoyo_squash/: metadata.desktop  metadata.json
scripts/yoyolauncher/: metadata.desktop
scripts/yoyolauncher/contents/: main.js
scripts/yoyoshake/: metadata.desktop
tabbox/yoyo_thumbnail/: metadata.desktop
